--- a/vehicle/mkv/software/bms/bms.yml
+++ b/vehicle/mkv/software/bms/bms.yml
@@ -44,14 +44,14 @@ publish:
         slice: 24 + 8
         unit:
           type: uint8_t
-          name: degC
+          name: V
           offset: 0
           scale: 0.0001
       - name: max_temperature
         slice: 32 + 8
         unit:
           type: uint8_t
-          name: degC
+          name: V
           offset: 0
           scale: 0.0001
       - name: pack_current
@@ -82,27 +82,39 @@ publish:
           values:
             t: Current limiting enabled
             f: Current limiting disabled
-      - name: relay_status
-        slice: 55 + 1
-        unit:
-          type: bool
-          values:
-            t: BMS relay closed
-            f: BMS relay open
       - name: bspd_current_sense
-        slice: 56 + 1
+        slice: 55 + 1
         unit:
           type: bool
           values:
             t: Current sensed
             f: No current sensed
       - name: overcurrent_detect
-        slice: 57 + 1
+        slice: 56 + 1
         unit:
           type: bool
           values:
             t: Over-current detected
             f: No over-current detected
+
+  - name: bms_sense
+    id: 0x011
+    freq_hz: 100
+    signals:
+      - name: min_temperature
+        slice: 0 + 16
+        unit:
+          type: int16_t
+          name: V
+          offset: 0
+          scale: 0.0001
+      - name: max_temperature
+        slice: 16 + 16
+        unit:
+          type: int16_t
+          name: V
+          offset: 0
+          scale: 0.0001
 
   - name: bms_metrics
     id: 0x510
