schem changes, + code updates for default SPI peripheral + testing

--- a/.avrduderc
+++ b/.avrduderc
@@ -16,6 +16,13 @@ programmer
   usbproduct = "USBasp";
 ;
 
+programmer
+  id    = "avrispmkII";
+  desc  = "Atmel AVR ISP mkII";
+  type  =  "stk500v2";
+  connection_type = usb;
+;
+
 #------------------------------------------------------------
 # ATmega16
 #------------------------------------------------------------
