Milestone: MKV Wheels Spinning (#135)
* Remove BMS_SENSE from air control

* Update calculation of pack voltage

* Format

* Add debug LED to BSPD to show brake pressed

* Fix inverted logic issue in bspd shutdown sensing

* Update throttle debug message ID

* Fix temperature CAN sending in BMS

* Fix AIR check during SS_CLOSED

* Fix BMS voltage comparison value in AIR control

* Fix get_bms_voltage processing logic

* Calibrate throttle and fix bugs (#140)

* fixed state setting, calibrated pots

* Clean up and add comments

Co-authored-by: Jack Greenberg <jgreenberg@olin.edu>

* Modify BMS temperature to use asynchronous architecture (#141)

* Remove old commented-out code

* Refactor temperature_task to be shorter and more asynchronous

* Add calibration for BMS temperatures

* Reinstate MAX_EXTRANEOUS_TEMPERATURE checking

* Add hacks for temperature and voltage sensing flaws

* Last minute bug fixes

* Add in missing AIR states

* Remove min/max temp from bms_core signals

* Format

* Remove temperature testing image for BMS

* Update BSPD yaml to flip shutdown logic

* Add PWM support for fans

Co-authored-by: Manu Patil <mpatil@olin.edu>

* Fix syntax

* Add delay before checking for AIR welds in discharge (#143)

* Add delay for AIR weld check in discharge

* Implement IMD check delay and AIR weld delay

* Add fix for errata

* Add IMD_SENSE check back in

* Set shutdown sense pins to inputs and cleared pins at the start of the main function

* Fmt

* Standardize shutdown sense naming convention

* Remove temperature-out-of-range check in initial checks for BMS

* Invert BMS LED logic on dashboard

* Fix current sense issues in BMS

* Throttle fixes

* Format

* Update service section controller for rev 2 (#139)

* Made changes for Rev 2 of SS controller schematic and layout

changed 12V IMD net to 5V IMD
to make layout changes easier, 5V IMD is supplied after 5V AIR co

--- a/vehicle/mkv/software/bms/bms.yml
+++ b/vehicle/mkv/software/bms/bms.yml
@@ -40,62 +40,81 @@ publish:
           name: V
           offset: 0
           scale: 0.0001 * 256
-      - name: pack_temperature
-        slice: 24 + 16
-        unit:
-          type: int16_t
-          name: degC
-          offset: 0
-          scale: 0.0001
       - name: pack_current
-        slice: 40 + 12
+        slice: 24 + 12
         unit:
           type: int16_t
           name: A
           offset: 0
-          scale: 1
+          scale: 0.004
       - name: cell_balancing_status
-        slice: 52 + 1
+        slice: 36 + 1
         unit:
           type: bool
           values:
             t: Cell balancing enabled
             f: Cell balancing disabled
       - name: regen_enabled
-        slice: 53 + 1
+        slice: 37 + 1
         unit:
           type: bool
           values:
             t: Regenerative braking enabled
             f: Regenerative braking disabled
       - name: current_limiting_enabled
-        slice: 54 + 1
+        slice: 38 + 1
         unit:
           type: bool
           values:
             t: Current limiting enabled
             f: Current limiting disabled
-      - name: relay_status
-        slice: 55 + 1
-        unit:
-          type: bool
-          values:
-            t: BMS relay closed
-            f: BMS relay open
       - name: bspd_current_sense
-        slice: 56 + 1
+        slice: 39 + 1
         unit:
           type: bool
           values:
             t: Current sensed
             f: No current sensed
       - name: overcurrent_detect
-        slice: 57 + 1
+        slice: 40 + 1
         unit:
           type: bool
           values:
             t: Over-current detected
             f: No over-current detected
+
+  - name: bms_sense
+    id: 0x011
+    freq_hz: 100
+    signals:
+      - name: min_temperature
+        slice: 0 + 16
+        unit:
+          type: uint16_t
+          name: V
+          offset: 0
+          scale: 0.0001
+      - name: max_temperature
+        slice: 16 + 16
+        unit:
+          type: uint16_t
+          name: V
+          offset: 0
+          scale: 0.0001
+      - name: current_vref
+        slice: 32 + 16
+        unit:
+          type: uint16_t
+          name: V
+          offset: 0
+          scale: 5 / 1024
+      - name: current_vout
+        slice: 48 + 16
+        unit:
+          type: uint16_t
+          name: V
+          offset: 0
+          scale: 5 / 1024
 
   - name: bms_metrics
     id: 0x510
