--- a/vehicle/mkv/software/throttle/throttle.yml
+++ b/vehicle/mkv/software/throttle/throttle.yml
@@ -35,27 +35,27 @@ publish:
           name: '%'
           offset: 0
           scale: 100/255
-      - name: BOTS_sense
+      - name: ss_bots
         slice: 40 + 1
         unit:
           type: bool
           values:
-            t: BOTS shutdown node closed
-            f: BOTS shutdown node open
-      - name: inertia_switch_sense
+            t: CLOSED
+            f: OPEN
+      - name: ss_is
         slice: 41 + 1
         unit:
           type: bool
           values:
-            t: inertia switch shutdown node closed
-            f: inertia switch shutdown node open
-      - name: E_stop_sense
+            t: CLOSED
+            f: OPEN
+      - name: ss_estop_driver
         slice: 42 + 1
         unit:
           type: bool
           values:
-            t: E-stop shutdown node closed
-            f: E-stop shutdown node open
+            t: CLOSED
+            f: OPEN
   - name: throttle_debug
     id: 0x5C0
     freq_hz: 100
