--- a/vehicle/mkv/software/bms/bms.yml
+++ b/vehicle/mkv/software/bms/bms.yml
@@ -29,8 +29,7 @@ publish:
           type: enum
           values:
             - INIT
-            - IDLE
-            - DISCHARGING
+            - ACTIVE
             - CHARGING
             - FAULT
       - name: pack_voltage
