switch to yaml based config

--- a/projects/canviewer/BUILD
+++ b/projects/canviewer/BUILD
@@ -8,6 +8,7 @@ py_binary(
     ],
     data = [
         "//vehicle/mkv:mkv.dbc",
+        ":config.yml",
     ],
     main = "canviewer.py",
     visibility = ["//visibility:public"],
