--- a/.bazelrc
+++ b/.bazelrc
@@ -29,7 +29,7 @@ build:docker-kicad --define=EXECUTOR=remote
 build:docker-kicad --experimental_docker_verbose
 build:docker-kicad --experimental_enable_docker_sandbox
 build:docker-kicad --incompatible_strict_action_env=true
-build:docker-kicad --experimental_docker_image=setsoft/kicad_auto
+build:docker-kicad --experimental_docker_image=setsoft/kicad_auto:ki6
 
 # Because I can never remember the order...
 build:kicad-docker --config=docker-kicad
