fix(bazel): update config for new project structure

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -24,6 +24,6 @@ gokart:
 - 'vehicle/gokart/**/*'
 
 hardware:
-- '**/*.pro'
-- '**/*.sch'
+- '**/*.kicad_pro'
+- '**/*.kicad_sch'
 - '**/*.kicad_pcb'
