--- a/projects/hitl/hardware/primary_board/BUILD
+++ b/projects/hitl/hardware/primary_board/BUILD
@@ -2,8 +2,8 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "hitl-primary",
-    schematic_files = ["hitl-primary.sch"] + glob(
-        ["*.sch"],
-        ["hitl-primary.sch"],
+    schematic_files = ["hitl-primary.kicad_sch"] + glob(
+        ["*.kicad_sch"],
+        ["hitl-primary.kicad_sch"],
     ),
 )
