--- a/vehicle/mkv/hardware/sensing_controller/BUILD
+++ b/vehicle/mkv/hardware/sensing_controller/BUILD
@@ -3,14 +3,14 @@ load("//bazel:defs.bzl", "kicad_hardware")
 kicad_hardware(
     name = "sensing_controller",
     schematic_files = [
-        "sensing_controller.sch",
-        "connectors.sch",
-        "micros.sch",
-        "power.sch",
-        "suspension_strain_individual.sch",
-        "suspension_strain.sch",
-        "suspension_travel.sch",
-        "tire_temp.sch",
-        "wheel_speed.sch",
+        "sensing_controller.kicad_sch",
+        "connectors.kicad_sch",
+        "micros.kicad_sch",
+        "power.kicad_sch",
+        "suspension_strain_individual.kicad_sch",
+        "suspension_strain.kicad_sch",
+        "suspension_travel.kicad_sch",
+        "tire_temp.kicad_sch",
+        "wheel_speed.kicad_sch",
     ],
 )
