--- a/vehicle/mkv/hardware/service_section_controller/BUILD
+++ b/vehicle/mkv/hardware/service_section_controller/BUILD
@@ -2,8 +2,8 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "service_section_controller",
-    schematic_files = ["service_section_controller.sch"] + glob(
-        ["*.sch"],
-        ["service_section_controller.sch"],
+    schematic_files = ["service_section_controller.kicad_sch"] + glob(
+        ["*.kicad_sch"],
+        ["service_section_controller.kicad_sch"],
     ),
 )
