fix: misc tweaks to resolve kibot errors

--- a/vehicle/mkv/hardware/service_section/peripheral/BUILD
+++ b/vehicle/mkv/hardware/service_section/peripheral/BUILD
@@ -3,3 +3,7 @@ load("//bazel:defs.bzl", "kicad_hardware")
 kicad_hardware(
     name = "bms_peripheral",
 )
+
+kicad_hardware(
+    name = "bms_peripheral_v2",
+)
