Add utils.py to CANviewer and allow application to exit gracefully

--- a/projects/canviewer/BUILD
+++ b/projects/canviewer/BUILD
@@ -5,6 +5,7 @@ py_binary(
     name = "canviewer",
     srcs = [
         "canviewer.py",
+        "utils.py",
     ],
     data = [
         ":config.yml",
