rename throttle state signal to be more descriptive

--- a/vehicle/mkv/software/throttle/throttle.yml
+++ b/vehicle/mkv/software/throttle/throttle.yml
@@ -11,7 +11,7 @@ publish:
     id: 0xC
     freq_hz: 100
     signals:
-      - name: state
+      - name: throttle_state
         slice: 0 + 8
         unit:
           type: enum
