added unit test to fix mask config

--- a/projects/can_api/tests/BUILD
+++ b/projects/can_api/tests/BUILD
@@ -11,6 +11,7 @@ pytest_test(
         "rx_fail.yml",
         "rx_only.yml",
         "tx_only.yml",
+        "rx_mask.yml",
     ],
     deps = [
         "//projects/can_api:c_generator",
