--- a/tutorials/fmc/fmc.yml
+++ b/tutorials/fmc/fmc.yml
@@ -4,13 +4,13 @@ subscribe:
     mob: 1
 publish:
   - name: fmc
-    id: 0xC
+    id: 0xF
     freq_hz: 100
     signals:
-      - name: adc_value
+      - name: temperature
         slice: 0 + 16
         unit:
           type: int16_t
-          name: ''
+          name: 'C'
           offset: 0
           scale: 1
