first round of revisions

--- a/projects/hitl/software/artifacts/config.ini
+++ b/projects/hitl/software/artifacts/config.ini
@@ -9,8 +9,8 @@ log_path=None # $LOGS/$DATETIME.log
 [HARDWARE]
 can_bitrate=500000
 can_channel=vcan0
+can_bustype=socketcan
 
 [PATHS]
 pin_config=pin_info.csv
-dbc_path=veh.dbc
-can_log_path=None  # TODO not supported yet
+dbc_path=mkv.dbc
