Fill in methods for python client

--- a/projects/btldr/tools/BUILD
+++ b/projects/btldr/tools/BUILD
@@ -1,3 +1,5 @@
+load("//vehicle/mkv:ecus.bzl", "ECUS")
+
 cc_binary(
     name = "patch_header",
     srcs = [
@@ -14,4 +16,21 @@ cc_binary(
         "//projects/btldr/libs/crc32",
         "//projects/btldr/libs/image:hdrs",
     ],
+)
+
+py_binary(
+    name = "updatr_yml_gen",
+    srcs = [
+        "updatr_yml_gen.py",
+    ],
+    main = "updatr_yml_gen.py",
+)
+
+genrule(
+    name = "updatr_dbc",
+    srcs = [],
+    outs = ["updatr.dbc"],
+    cmd = "$(location :updatr_yml_gen) \'" + json.encode(ECUS) + "\' $@",
+    tools = [":updatr_yml_gen"],
+    visibility = ["//visibility:public"],
 )
