--- a/projects/hitl/software/tests/BUILD
+++ b/projects/hitl/software/tests/BUILD
@@ -1,15 +1,16 @@
-load("@rules_python//python:defs.bzl", "py_binary", "py_library")
+load("@rules_python//python:defs.bzl", "py_library")
 load("//tools/pytest:defs.bzl", "pytest_test")
 
 pytest_test(
-    name = "hitl",
+    name = "hitl_unit_tests",
     srcs = [
-        "__init__.py",
-        "test_main.py",
-        "throttle_test.py",
+        "unit/test_can.py",
+        "unit/test_io.py",
+        "unit/test_utils.py",
     ],
     data = [
         "//vehicle/mkv:mkv.dbc",
+        "pytest.ini",
     ],
     imports = ["."],
     tags = [
