removed msg that is missing from dbc

--- a/vehicle/mkv/software/air_control/air.yml
+++ b/vehicle/mkv/software/air_control/air.yml
@@ -9,8 +9,8 @@ subscribe:
     mob: 2
 
     # TODO: How are we handling this? Maybe we don't handle it here...
-  - name: air_control_updater
-    mob: 5
+  # - name: air_control_updater
+  #   mob: 5
 publish:
   - name: air_control_critical
     id: 0xd
