--- a/.bazelrc
+++ b/.bazelrc
@@ -14,7 +14,7 @@ build:64m1-avr --platforms=//bazel/platforms:atmega64m1_avr
 build:64m1 --config=64m1-avr
 
 #STM32 target
-build:stm32 --platforms=@arm_none_eabi//platforms:arm_none_generic
+build:stm32 --platforms=//bazel/platforms:stm32f103_arm
 
 # Test target
 build:avr-test-sim --platforms=//bazel/platforms:avr_test_sim
