--- a/test_stm_image/BUILD
+++ b/test_stm_image/BUILD
@@ -9,5 +9,5 @@ cc_firmware(
         "//bazel/constraints:stm32f103c8t6",
     ],
     visibility = ["//visibility:public"],
-    deps = ["@libopencm3//:libopencm3"],
+    deps = ["@libopencm3"],
 )
