Refactor and add more to flash method

--- a/projects/btldr/py_client/BUILD
+++ b/projects/btldr/py_client/BUILD
@@ -15,8 +15,8 @@ pytest_test(
         "test_btldr_client.py",
         "conftest.py",
     ],
-    data = ["//projects/btldr/tools:updatr_dbc"],
     deps = [
         ":btldr",
     ],
+    visibility = ["//visibility:public"],
 )
