--- a/projects/can_api/tests/BUILD
+++ b/projects/can_api/tests/BUILD
@@ -9,6 +9,7 @@ pytest_test(
     ],
     data = [
         "rx_fail.yml",
+        "rx_mask.yml",
         "rx_only.yml",
         "tx_only.yml",
     ],
