Integrate CAN Software Update (#36)
* Add UART library

Also adds example to blinky

* Integrate shared memory library

* Add crc32 library

* Add flash library

* Add image library

* clang-format

* buildify

* clang-format

* Add more comments and fix APIs

* Clang-format and fix unused

* --wip-- [skip ci]

* fmt

* Add initial bootloader client code

* Initial CAN Software Update Client code

* Add a bunch of files

* Integrate Bazel into bootloader

* Add ability to flash bootloader and patch header

* buildifier

* Fix build issues with patched binary

* clang_format

* Fix client integration with Bazel

* More fixes including runfiles issue

--wip-- [skip ci]

* Fix issues in building

* Replace jump instruction

* --wip-- [skip ci]

* Fix bugs

* Format

* Fix last page not getting written issue

* Resolve AIR control conflicts

* Reorganize

* Format

* Buildify

* Revert library changes

* Fix build issue for non-btldr-enabled images

* Whoops, minor bug in last commit

* Remove 64m1 support from AIR control until it is supported in BTLDR

* Clean up process for adding btldr to images

* Add btldr to dashboard

* Fix btldr in dashboard and add to throttle

* Add btldr to BSPD (and rename)

* Add btldr to bms

* Clean up

* Buildifier

* Clean up CAN IDs

* Fix default BTLDR ID issue

* Format

* Fix CAN masks to check 3 bits instead of 4

* Fix issues with new air control changes

* Flashing with usbasp now sets image as valid

* fmt

--- a/vehicle/mkv/software/air_control/BUILD
+++ b/vehicle/mkv/software/air_control/BUILD
@@ -14,10 +14,11 @@ cc_firmware(
     srcs = [
         "air.c",
         "air_config.h",
+        "//projects/btldr:git_sha_header",
     ],
+    btldr = "//projects/btldr:air_control_btldr",
     target_compatible_with = select({
         "//bazel/constraints:atmega16m1": [],
-        "//bazel/constraints:atmega64m1": [],
         "//conditions:default": ["//bazel/constraints:incompatible_mcu"],
     }),
     deps = [
@@ -25,6 +26,7 @@ cc_firmware(
         ":utils",
         "//libs/gpio",
         "//libs/timer",
+        "//projects/btldr:btldr_lib",
     ],
 )
 
