--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -20,5 +20,6 @@ refresh_compile_commands(
     name = "refresh_compile_commands",
     targets = {
         "//vehicle/mkv/software/...": "--platforms=//bazel/platforms:atmega16m1_avr -c opt",
+        "//projects/btldr/tools:patch_header": "--platforms=//bazel/platforms:linux-x86_64 -c opt",
     },
 )
