Add CLI and move tests to separate folder

--- a/projects/btldr/py_client/BUILD
+++ b/projects/btldr/py_client/BUILD
@@ -1,22 +1,23 @@
 load("//tools/pytest:defs.bzl", "pytest_test")
 
+py_binary(
+    name = "updatr",
+    srcs = [
+        "cli.py",
+    ],
+    main = "cli.py",
+    deps = [
+        ":btldr",
+    ],
+    visibility = ["//visibility:public"],
+)
+
 py_library(
     name = "btldr",
     srcs = [
         "btldr.py",
         "btldr_database.py",
         "__init__.py",
-    ],
-)
-
-pytest_test(
-    name = "test_btldr_client",
-    srcs = [
-        "test_btldr_client.py",
-        "conftest.py",
-    ],
-    deps = [
-        ":btldr",
     ],
     visibility = ["//visibility:public"],
 )
