--- a/projects/can_test_platform/tester_board/BUILD
+++ b/projects/can_test_platform/tester_board/BUILD
@@ -1,4 +1,5 @@
 load("//bazel/tools:defs.bzl", "can_api_files")
+load("//bazel:defs.bzl", "cc_firmware")
 
 exports_files([
     "tester_board.yml",
@@ -8,4 +9,22 @@ can_api_files(
     name = "can_api",
     dbc = "//vehicle/mkv:mkv.dbc",
     yaml = ":tester_board.yml",
+)
+
+cc_firmware(
+    name = "can_tester_board",
+    srcs = [
+        "tester_board_config.h",
+        "tester_board.c",
+    ],
+    target_compatible_with = [
+        "//bazel/constraints:atmega16m1",
+    ],
+    visibility = [
+        "//visibility:public",
+    ],
+    deps = [
+        ":can_api",
+        "//libs/timer",
+    ]
 )
