--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "can_api.h": "c"
+        "can_api.h": "c",
+        "api.h": "c",
+        "btldr_lib.h": "c"
     }
 }
