--wip-- [skip ci]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "can_api.h": "c",
         "api.h": "c",
-        "btldr_lib.h": "c"
+        "btldr_lib.h": "c",
+        "pin_defs.h": "c"
     }
 }
