--- a/projects/can_test_platform/tester_board/tester_board.yml
+++ b/projects/can_test_platform/tester_board/tester_board.yml
@@ -3,7 +3,7 @@ subscribe:
   - name: throttle
     mob: 1
 publish:
-  - name: can_test_platform
+  - name: test_message
     id: 0xff
     freq_hz: 100
     signals:
