fix: update BUILD for subsheets and rename parent dir

--- a/vehicle/mkvi/hardware/service-section/precharge_discharge/BUILD
+++ b/vehicle/mkvi/hardware/service-section/precharge_discharge/BUILD
@@ -2,8 +2,5 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "precharge_discharge",
-    schematic_files = [
-        "precharge_discharge.kicad_sch",
-        "thermistor.kicad_sch",
-    ],
+    schematic_files = ["precharge_discharge.kicad_sch", "thermistor.kicad_sch"]
 )
