lint: format BUILD file

--- a/vehicle/mkvi/hardware/service-section/precharge_discharge/BUILD
+++ b/vehicle/mkvi/hardware/service-section/precharge_discharge/BUILD
@@ -2,5 +2,8 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "precharge_discharge",
-    schematic_files = ["precharge_discharge.kicad_sch", "thermistor.kicad_sch"]
+    schematic_files = [
+        "precharge_discharge.kicad_sch",
+        "thermistor.kicad_sch",
+    ],
 )
