--- a/vehicle/mkvi/hardware/nostril/dashboard/BUILD
+++ b/vehicle/mkvi/hardware/nostril/dashboard/BUILD
@@ -1,5 +1,9 @@
 load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
-    name = "template_board",
+    name = "dashboard",
+    schematic_files = ["dashboard.kicad_sch"] + glob(
+        ["*.kicad_sch"],
+        ["dashboard.kicad_sch"],
+    ),
 )
