--- a/vehicle/mkvi/hardware/nostril/brakes/BUILD
+++ b/vehicle/mkvi/hardware/nostril/brakes/BUILD
@@ -1,8 +1,10 @@
+
 load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
-	name = "brakes",
-	schematic_files = ["brakes.kicad_sch"] + glob(
-		["*.kicad_sch"],
-	),
+    name = "brakes",
+    schematic_files = ["brakes.kicad_sch"] + glob(
+        ["*.kicad_sch"],
+        ["brakes.kicad_sch"],
+    ),
 )
