testing ibom generation with kibot

--- a/scripts/kibot/build.kibot.yaml
+++ b/scripts/kibot/build.kibot.yaml
@@ -30,6 +30,11 @@ outputs:
     type: bom
     options:
       output: "%f.csv"
+  
+  - name: "ibom"
+    type: ibom
+    options:
+      output: "%f.html"
 
   - name: gerbers
     type: gerber
