--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       run: sudo apt install gcc-avr avr-libc binutils-avr
 
     - name: Build this shit
-      run: bazel build --config=${{ matrix.platform }} -c opt //projects/can_test_platform/tester_board -- -c usbasp
+      run: bazel build --config=${{ matrix.platform }} -c opt //libs/can/test:test_app
 
     - name: Build all host
       run: bazelisk build --config=${{ matrix.platform }} -c opt --build_tag_filters="-kicad" //...
