--- a/libs/tunables/test_recieving.yml
+++ b/libs/tunables/test_recieving.yml
@@ -4,18 +4,19 @@
 name: test_MCU
 publish:
   - name: test_listen
-    id: 6E0
-    freq_hz: 0
+    id: 0x6E0
+    freq_hz: 100
     signals:
-      - msg_reply
-        slice: 0 +1
+      - name: msg_reply
+        slice: 0 + 1
         unit: 
           type: bool
+          values:
              t: ON
              f: OFF
 
 subscribe:
-  - name: test_msg
+  - name: test_msg1
     mob: 1
 
 
