--- a/libs/tunables/tester.yml
+++ b/libs/tunables/tester.yml
@@ -2,17 +2,18 @@
 
 name: test_Comp
 publish:
-  - name: test_msg
-    id: 6E0
-    freq_hz: 0
+  - name: test_msg1
+    id: 0x6E0
+    freq_hz: 100
     signals:
-    - msg_bit
-    slice: 0+8
-    unit: 
-      type: boolean
-        t: ON
-        f: OFF
-        
+      - name: msg_bit
+        slice: 0 + 1
+        unit: 
+          type: bool
+          values:
+            t: ON
+            f: OFF
+
 subscribe: 
   - name: test_listen
-   mob: 1 
+    mob: 1 
