FIx YAML Files...

--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -13,5 +13,7 @@ dbc_gen(
         "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
         "//vehicle/mkv/software/dashboard:dashboard.yml",
         "//vehicle/mkv/software/throttle:throttle.yml",
+        "//libs/tunables:tester.yml",
+        "//libs/tunables:test_recieving.yml"
     ],
 )
