--- a/vehicle/mkvi/rkh/BUILD
+++ b/vehicle/mkvi/rkh/BUILD
@@ -2,7 +2,7 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "rkh",
-    schematic_files = ["rkh.kicad_sch"] + glob(
+    schematic_files = glob(
         ["*.kicad_sch"],
     ),
 )
