Layout checkpoint, might redo

--- a/vehicle/mkvi/rkh/BUILD
+++ b/vehicle/mkvi/rkh/BUILD
@@ -2,7 +2,8 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "rkh",
-    schematic_files = glob(
+    schematic_files = ["rkh.kicad_sch"] + glob(
         ["*.kicad_sch"],
+        ["rkh.kicad_sch"],
     ),
 )
