add small OEM logo and update BUILD file

--- a/vehicle/mkvi/hardware/nostril/throttle/BUILD
+++ b/vehicle/mkvi/hardware/nostril/throttle/BUILD
@@ -2,4 +2,8 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "throttle",
+    schematic_files = ["throttle.kicad_sch"] + glob(
+        ["*.kicad_sch"],
+        ["throttle.kicad_sch"],
+    ),
 )
