--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ fp-info-cache
 external
 !/vehicle/mkv/hardware/service_section/interface/external/
 compile_commands.json
+
+# libaries handled by symbol converter tool
+oem.kicad_sym
