--- a/projects/btldr/py_client/tests/BUILD
+++ b/projects/btldr/py_client/tests/BUILD
@@ -1,3 +1,4 @@
+load("@hitl_deps//:requirements.bzl", "requirement")
 load("//tools/pytest:defs.bzl", "pytest_test")
 
 pytest_test(
@@ -13,5 +14,7 @@ pytest_test(
     visibility = ["//visibility:public"],
     deps = [
         "//projects/btldr/py_client:btldr",
+        requirement("cantools"),
     ],
+    tags = ["manual"], # No support for running in CI yet--must be invoked manually
 )
