created cc_arm_firmware to fix issues compiling arm image

--- a/test_stm_image/BUILD
+++ b/test_stm_image/BUILD
@@ -1,6 +1,6 @@
-load("//bazel:defs.bzl", "cc_firmware")
+load("//bazel:defs.bzl", "cc_arm_firmware")
 
-cc_firmware(
+cc_arm_firmware(
     name = "test_stm_image",
     srcs = [
         "test.c",
