--- a/libs/tunables/tunables.yml
+++ b/libs/tunables/tunables.yml
@@ -1,14 +1,14 @@
 - board: bms
+  recieve_id: 0x6E2
+  send_id: 0x6E3
   params:
-  - current_value: '2.3'
+  - current_value: 2.3
     name: cell_voltage_max
   - current_value: 1.3
     name: cell_voltage_min
-  recieve_id: 1763
-  send_id: 1762
 - board: aircontrol
+  recieve_id: 0x6E0
+  send_id: 0x6E1
   params:
-  - current_value: 'True'
+  - current_value: True
     name: air_con1
-  recieve_id: 24801
-  send_id: 1760
