--- a/libs/tunables/tunables.yml
+++ b/libs/tunables/tunables.yml
@@ -1,14 +1,24 @@
 - board: bms
-  recieve_id: 0x6E2
-  send_id: 0x6E3
+  recieve_id: 1762
+  send_id: 1763
   params:
-  - current_value: 2.3
-    name: cell_voltage_max
-  - current_value: 1.3
-    name: cell_voltage_min
+  - name: hello
+    current_value: 2.3
+    date_modified: '2023-02-02'
+    edit: true
+  - name: cell_voltage_max
+    current_value: 1.3
+    date_modified: '2023-02-01'
+    edit: false
+  - name: cell_voltage_min
+    current_value: hello
+    date_modified: '2023-01-09'
+    edit: true
 - board: aircontrol
-  recieve_id: 0x6E0
-  send_id: 0x6E1
+  recieve_id: 1760
+  send_id: 1761
   params:
-  - current_value: True
-    name: air_con1
+  - name: air_con1
+    current_value: true
+    date_modified: 2023-02-09
+    edit: true
