revised BUILD file

--- a/vehicle/mkvi/hardware/sensing/BUILD
+++ b/vehicle/mkvi/hardware/sensing/BUILD
@@ -4,6 +4,6 @@ kicad_hardware(
     name = "sensing_controller",
     schematic_files = ["sensing_controller.kicad_sch"] + glob(
         ["*.kicad_sch"],
-        ["brakes.kicad_sch"],
+        ["sensing_controller.kicad_sch"],
     ),
 )
