Fix compilation errors

--- a/vehicle/mkvi/software/throttle/BUILD
+++ b/vehicle/mkvi/software/throttle/BUILD
@@ -8,7 +8,7 @@ exports_files([
 cc_firmware(
     name = "throttle",
     srcs = [
-        "throttle.C",
+        "throttle.c",
         "throttle_config.h",
     ],
     btldr = "//projects/btldr:throttle_btldr",
@@ -18,29 +18,11 @@ cc_firmware(
     visibility = ["//visibility:public"],
     deps = [
         ":can_api",
-        ":utils",
         "//libs/adc",
         "//libs/can",
         "//libs/gpio",
         "//libs/timer",
         "//projects/btldr:btldr_lib",
-    ],
-)
-
-cc_library(
-    name = "utils",
-    srcs = [
-        "utils/timer.c",
-    ],
-    hdrs = [
-        "utils/timer.h",
-    ],
-    target_compatible_with = [
-        "//bazel/constraints:atmega16m1",
-    ],
-    visibility = ["//visibility:private"],
-    deps = [
-        "//libs/timer",
     ],
 )
 
