Fix build errors

--- a/vehicle/mkv/software/bms/bms.yml
+++ b/vehicle/mkv/software/bms/bms.yml
@@ -22,6 +22,7 @@ publish:
             - OPEN_WIRE
             - OVERCURRENT
             - PEC
+            - CHARGER_FAULT
       - name: bms_state
         slice: 4 + 4
         unit:
