--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -7,5 +7,7 @@ dbc_gen(
         "//vehicle/common/emeter:emeter.dbc",
         "//vehicle/common/motor_controller:motor_controller.dbc",
         "//vehicle/mkvi/software/brakes:bspd.yml",
+        "//vehicle/mkvi/software/air_control:air.yml",
+        "//vehicle/mkvi/software/bms:bms.yml",
     ],
 )
