--- a/libs/tunables/BUILD
+++ b/libs/tunables/BUILD
@@ -16,36 +16,30 @@ cc_library(
     ],
 )
 
-exports_files([ 
-
+exports_files([
     "tunables.yml",
-    "test_recieving.yml"
+    "test_recieving.yml",
 ])
 
 can_api_files(
-
     name = "can_api",
     dbc = "//vehicle/mkv:mkv.dbc",
-    yaml = ":test_recieving.yml"
-
-
+    yaml = ":test_recieving.yml",
 )
 
 cc_firmware(
     name = "tester",
     srcs = [
-        "tester.c"
+        "tester.c",
     ],
     target_compatible_with = [
-        "//bazel/constraints:atmega16m1"
-
+        "//bazel/constraints:atmega16m1",
     ],
-
-    visibility = 
-    [
-        "//visibility:public"], 
+    visibility =
+        [
+            "//visibility:public",
+        ],
     deps = [
-        ":can_api"]
-
-
+        ":can_api",
+    ],
 )
