Update MKVI Air control and add in more yml

--- a/vehicle/mkvi/BUILD
+++ b/vehicle/mkvi/BUILD
@@ -9,5 +9,6 @@ dbc_gen(
         "//vehicle/mkvi/software/brakes:bspd.yml",
         "//vehicle/mkvi/software/air_control:air.yml",
         "//vehicle/mkvi/software/bms:bms.yml",
+        "//vehicle/mkvi/software/bms/charging:charging.yml",
     ],
 )
