Fix compilation issue that messed up btldr

--- a/projects/btldr/BUILD
+++ b/projects/btldr/BUILD
@@ -16,6 +16,7 @@ package(default_visibility = ["//visibility:public"])
         defines = [
             "BTLDR_ID=" + data["btldr_id"],
         ],
+        is_btldr = True,
         linkopts = [
             "-static",
             "-nostartfiles",
